[tool.poetry]
name = "twitch-example"
version = "0.1.0"
description = ""
authors = ["Michael Cuffaro <michael@cuffaro.com>"]
readme = "README.md"
packages = [{include = "twitch_example"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
